updates to frontend and backend
